Fix h5p scrollbar and background color

--- a/src/scss/recit/_general.scss
+++ b/src/scss/recit/_general.scss
@@ -1,10 +1,6 @@
 /*******************
 Bodys
 *******************/
-html{
-    background-color: #f7f7f7;
-}
-
 body{
     font-family: $font-family-text; 
     font-size: $font-family-text-size;
@@ -18,6 +14,14 @@ body{
     // il faut pas qu'il soit hidden sinon le menu flotant ne s'affiche pas au complet
     #page-content{
         overflow: inherit;
+    }
+}
+
+body.h5p-embed {
+    //h5p iframe has gray background, remove it
+    background-color: #fff !important;
+    #page-content{
+        margin-top: 0px;
     }
 }
 
